# geoquiz

./: LICENSE  README.md  all_names.py  all_names_soup.py  alt_names.csv  csvfile.py  filtered_data.csv  gdp.py  gdp_area.csv  images.py  images_more.py  pyproject.toml  quiz.py  requirements.txt  selected_names.csv  temp.csv
geojson files/: Marshall Islands.geojson  Mauritius.geojson  Seychelles.geojson  maldives.geojson  sa.geo.json  vatican.json
geoquiz/: quiz.py
geoquiz/csv/: selected_names.csv
